# aqualord

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  README.zh-CN.md  acquire_data.py  basin_precipitation.py  conditional_merge.py  data-from-db.py  data_from_db.py  data_from_graph.py  data_preprocess.py  environment.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  project_util.py  pyproject.toml  rainfall_krige.py  rainfall_kriging.py  read_config.py  time_unit_type.py  tsconfig.json  utils.py  vitest.config.ts
ARSET/: 1-fundmental-RS.ipynb  2-introductory.ipynb  2.10-Introduction to Synthetic Aperture Radar.md  2.2-Water Resources Management.md  2.3-Flood and Drought application.md  2.4-Introduction to NASA Earth Science Data Products, Portals, and Tools.md  2.7-NASA Remote Sensing Observations for Flood Management.md  2.8-Using NASA Remote Sensing for Disaster Management.md  3-intermediate.ipynb  4-advanced.ipynb  readme.md
CAMELS/: CAMELS-other.md
CMIP6/: download-cmip6.ipynb  readme.md
CloudStor/: googledrive.ipynb
DAM/: dam.ipynb  nid.ipynb  nid_dib.ipynb  readme.md
DEM/: readme.md
DataFormat/: hdf5.ipynb  netcdf.ipynb  readme.md
EOMarket/: readme.md
Electric/: readme.md
GAGES/: flowdb.ipynb  gages-dataset.md  nwis.ipynb  usgs-data-api.py  usgs-dataretrieval.ipynb  usgs-streamflow.ipynb
GRACE/: grace.md
HydroSHEDS/: readme.md
LDAS/: NLDAS-forcings.md
Landsat/: intro-landsat.md
MODIS/: 1-download-modis.md  2-more-download-way.ipynb  get_modis.py  modis-basic.ipynb  readme.md  ssebop.ipynb
(+125 files in other folders)
